--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test:remote": "mkdir -p .build; . ./helpers/endpoint.sh; npm run test",
     "clean": "rm -rf node_modules && rm -rf src/node_modules",
     "deploy": "./node_modules/.bin/serverless deploy | tee .build/deploy.out",
-    "deploy:cicd": "./node_modules/.bin/serverless deploy --stage cicd --aws-profile asurion-dev.retaildevops | tee .build/deploy.out",
+    "deploy:cicd": "./node_modules/.bin/serverless deploy --stage cicd | tee .build/deploy.out",
     "predeploy": "mkdir -p .build",
     "predeploy:cicd": "npm run predeploy",
     "install:lambda": "cd src; npm install; cd ..",
