--- a/package.json
+++ b/package.json
@@ -9,17 +9,7 @@
     "serverless",
     "todo"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nerdguru/serverlessTodos.git"
-  },
-  "bugs": {
-    "url": "https://github.com/nerdguru/serverlessTodos/issues"
-  },
-  "author": "Pete Johnson <petecj2@gmail.com>",
-  "contributors": [
-    "Sebastian Müller <mail@sbstjn.com> (https://sbstjn.com)"
-  ],
+  "author": "Karthikraj P <pkarthikraj@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.6.7",
