--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,8 @@ phases:
     commands:
       - npm install
       - npm run install:lambda
+      - pwd
+      - ls -lrt
   build:
     commands:
       - npm run deploy:cicd
